add new content to webpage

--- a/mozliwosci-wspolpracy.html
+++ b/mozliwosci-wspolpracy.html
@@ -90,41 +90,25 @@
     </header>
 
     <!-- Section 01 -->
-    <section class="whiteSection" id="firstId">
-        <h1>Tekst Tekst Tekst</h1>
-        <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi autem impedit iusto velit quidem ipsam sed. Modi doloremque perspiciatis animi id, ratione similique aperiam architecto officiis quasi quis consequuntur dicta? Enim similique consequatur officia
-            consequuntur eligendi facere veritatis quis ut soluta aperiam esse exercitationem fugit, non placeat, fugiat sint aliquam voluptatum, cupiditate illum. Expedita quam optio debitis quidem ad dolorum? Aut, modi voluptas vitae doloribus quod
-            provident alias saepe odio tempora et doloremque vel laborum optio dolores id amet recusandae aspernatur. Minima vitae, nulla quae sapiente beatae excepturi? Illo, vitae? Iure sit minus odit accusamus quasi amet saepe libero sapiente vero
-            assumenda ratione, temporibus culpa labore quo adipisci tempora pariatur animi ipsum enim, error vitae, quia alias aliquid. Cupiditate, consectetur! Dignissimos eos dolorem nulla, amet dicta dolor inventore maiores deserunt doloribus, totam
-            modi eligendi magnam iste voluptas? Optio soluta quidem autem maiores repudiandae nulla, debitis possimus at dolorum! Minus, sint. Deserunt assumenda tenetur error vel nulla vitae ex odio iusto molestiae corrupti. Autem magnam esse rerum nesciunt
-            consectetur, error minus asperiores debitis praesentium, iusto nihil, culpa id suscipit cupiditate natus.
-        </p>
-    </section>
-
-    <!-- Section 02 -->
-    <section class="colorSection">
-        <h2>Tekst Tekst Tekst</h2>
-        <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi autem impedit iusto velit quidem ipsam sed. Modi doloremque perspiciatis animi id, ratione similique aperiam architecto officiis quasi quis consequuntur dicta? Enim similique consequatur officia
-            consequuntur eligendi facere veritatis quis ut soluta aperiam esse exercitationem fugit, non placeat, fugiat sint aliquam voluptatum, cupiditate illum. Expedita quam optio debitis quidem ad dolorum? Aut, modi voluptas vitae doloribus quod
-            provident alias saepe odio tempora et doloremque vel laborum optio dolores id amet recusandae aspernatur. Minima vitae, nulla quae sapiente beatae excepturi? Illo, vitae? Iure sit minus odit accusamus quasi amet saepe libero sapiente vero
-            assumenda ratione, temporibus culpa labore quo adipisci tempora pariatur animi ipsum enim, error vitae, quia alias aliquid. Cupiditate, consectetur! Dignissimos eos dolorem nulla, amet dicta dolor inventore maiores deserunt doloribus, totam
-            modi eligendi magnam iste voluptas? Optio soluta quidem autem maiores repudiandae nulla, debitis possimus at dolorum! Minus, sint. Deserunt assumenda tenetur error vel nulla vitae ex odio iusto molestiae corrupti. Autem magnam esse rerum nesciunt
-            consectetur, error minus asperiores debitis praesentium, iusto nihil, culpa id suscipit cupiditate natus.
-        </p>
-    </section>
-
-    <!-- Section 03 -->
     <section class="whiteSection">
-        <h2>Tekst Tekst Tekst</h2>
         <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi autem impedit iusto velit quidem ipsam sed. Modi doloremque perspiciatis animi id, ratione similique aperiam architecto officiis quasi quis consequuntur dicta? Enim similique consequatur officia
-            consequuntur eligendi facere veritatis quis ut soluta aperiam esse exercitationem fugit, non placeat, fugiat sint aliquam voluptatum, cupiditate illum. Expedita quam optio debitis quidem ad dolorum? Aut, modi voluptas vitae doloribus quod
-            provident alias saepe odio tempora et doloremque vel laborum optio dolores id amet recusandae aspernatur. Minima vitae, nulla quae sapiente beatae excepturi? Illo, vitae? Iure sit minus odit accusamus quasi amet saepe libero sapiente vero
-            assumenda ratione, temporibus culpa labore quo adipisci tempora pariatur animi ipsum enim, error vitae, quia alias aliquid. Cupiditate, consectetur! Dignissimos eos dolorem nulla, amet dicta dolor inventore maiores deserunt doloribus, totam
-            modi eligendi magnam iste voluptas? Optio soluta quidem autem maiores repudiandae nulla, debitis possimus at dolorum! Minus, sint. Deserunt assumenda tenetur error vel nulla vitae ex odio iusto molestiae corrupti. Autem magnam esse rerum nesciunt
-            consectetur, error minus asperiores debitis praesentium, iusto nihil, culpa id suscipit cupiditate natus.
+            Biuro Projektów "Metroprojekt" jest otwarte na szeroką współpracę we wszystkich obszarach prowadzonej przez siebie działalności. <br> W szczególności zachęcamy do wspólnych działań w zakresie:<br> - projektowania nowych typów urządzeń i systemów
+            sterowania ruchem i zarządzania infrastrukturą<br> - projektowania obiektów nietypowych, rozwiązań specjalizowanych, cyfrowych systemów sterowania i kontroli<br> - testowania urządzeń i systemów sterowania ruchem<br> - analiz ruchowych oraz
+            ekonomiczno-finansowych inwestycji infrastrukturalnych<br> - nadzorów autorskich i pełnienia funkcji inwestora zastępczego
+        </p>
+        <p>
+            Zachęcamy do współpracy wszystkie podmioty, które poszukują solidnego partnera w projektach inwestycyjnych wymagających specjalistycznej wiedzy i niecodziennych rozwiązań funkcjonalno-technicznych. Nasz zespół zapewni obsługę inwestycji od początku do
+            końca, wykorzystując także zaplecze badawczo-rozwojowe oraz kontrahentów w dziedzinie montażu, instalacji i budowy obiektów infrastruktury transportowej i technicznej. Stawiamy na stałą współpracę i długotrwałe korzyści dla obu stron. Interesuje
+            nas zawsze wspólny cel i realizacja zadania według potrzeb klienta.
+        </p>
+        <p>
+            Oferujemy współpracę jako podmiot z wieloletnim doświadczeniem i wykwalifikowaną kadrą w projektach badawczo-rozwojowych. Nasi pracownicy prowadzą działalność naukowo-badawczą i dydaktyczną w obszarze sterowania ruchem kolejowym. Kontakt z najnowocześniejszymi
+            technologiami oraz bezpośredni dostęp do producentów urządzeń sterowania ruchem kolejowym zapewnia unikalną w skali kraju możliwość projektowania nowych systemów bezpośrednio na bazie koncepcji opracowanych przez ośrodki naukowo-badawcze.
+            Zachęcamy w szczególności uczelnie wyższe i instytuty naukowe do nawiązania kontaktu, który może przerodzić się w stałą współpracę, projekty pilotażowe i docelowe wdrożenie na sieci kolejowej.
+        </p>
+        <p>
+            Jesteśmy otwarci na współpracę w obszarach:<br> - nowoczesnych metod projektowania i wytwarzania urządzeń i systemów sterowania ruchem<br> - cyfrowych systemów sterowania, systemu ERTMS/ETCS, systemów CBTC<br> - modułowej architektury systemów
+            sterowania i automatyki przemysłowej<br> - diagnostyki infrastruktury i systemów sterowania ruchem<br> - specjalizowanych rozwiązań w dziedzinie transportu i infrastruktury technicznej<br> - nietypowych konstrukcji i obiektów inżynierskich<br>            - innowacyjnych materiałów i ich zastosowania w budownictwie drogowym i kolejowym<br> - zaawansowanych systemów teleinformatycznych i elektroenergetycznych
         </p>
     </section>
 
