--- a/mozliwosci-wspolpracy.html
+++ b/mozliwosci-wspolpracy.html
@@ -102,13 +102,16 @@
             nas zawsze wspólny cel i realizacja zadania według potrzeb klienta.
         </p>
         <p>
-            Oferujemy współpracę jako podmiot z wieloletnim doświadczeniem i wykwalifikowaną kadrą w projektach badawczo-rozwojowych. Nasi pracownicy prowadzą działalność naukowo-badawczą i dydaktyczną w obszarze sterowania ruchem kolejowym. Kontakt z najnowocześniejszymi
-            technologiami oraz bezpośredni dostęp do producentów urządzeń sterowania ruchem kolejowym zapewnia unikalną w skali kraju możliwość projektowania nowych systemów bezpośrednio na bazie koncepcji opracowanych przez ośrodki naukowo-badawcze.
-            Zachęcamy w szczególności uczelnie wyższe i instytuty naukowe do nawiązania kontaktu, który może przerodzić się w stałą współpracę, projekty pilotażowe i docelowe wdrożenie na sieci kolejowej.
+            Oferujemy współpracę jako podmiot z wieloletnim doświadczeniem i wykwalifikowaną kadrą w projektach badawczo-rozwojowych. Nasi pracownicy prowadzą działalność naukowo-badawczą w obszarze sterowania ruchem kolejowym. Kontakt z najnowocześniejszymi technologiami
+            oraz bezpośredni dostęp do producentów urządzeń sterowania ruchem kolejowym zapewnia unikalną w skali kraju możliwość projektowania nowych systemów bezpośrednio na bazie koncepcji opracowanych przez ośrodki naukowo-badawcze. Zachęcamy w szczególności
+            uczelnie wyższe i instytuty naukowe do nawiązania kontaktu, który może przerodzić się w stałą współpracę, projekty pilotażowe i docelowe wdrożenie na sieci kolejowej.
         </p>
         <p>
             Jesteśmy otwarci na współpracę w obszarach:<br> - nowoczesnych metod projektowania i wytwarzania urządzeń i systemów sterowania ruchem<br> - cyfrowych systemów sterowania, systemu ERTMS/ETCS, systemów CBTC<br> - modułowej architektury systemów
             sterowania i automatyki przemysłowej<br> - diagnostyki infrastruktury i systemów sterowania ruchem<br> - specjalizowanych rozwiązań w dziedzinie transportu i infrastruktury technicznej<br> - nietypowych konstrukcji i obiektów inżynierskich<br>            - innowacyjnych materiałów i ich zastosowania w budownictwie drogowym i kolejowym<br> - zaawansowanych systemów teleinformatycznych i elektroenergetycznych
+        </p>
+        <p>
+            Nawiążemy współpracę z każdym, kto chce tak jak my rozwijać nowoczesne technologie, realizować konsekwentnie wyznaczone kierunki i nie boi się wyzwań.
         </p>
     </section>
 
