add header logo css

--- a/index.html
+++ b/index.html
@@ -95,6 +95,7 @@
             </ul>
         </nav>
         <h1 class="h1OverImg"><span>Świadczymy kompleksowe usługi projektowe i służymy naszym klientom od przeszło 70 lat.</span></h1>
+        <img class="yearsimg" src="./img/70 LAT TRADYCJI_białe.png" alt="">
     </header>
 
     <!-- Button Section -->
