--- a/inwestorstwo-zastepcze-ekspertyzy.html
+++ b/inwestorstwo-zastepcze-ekspertyzy.html
@@ -22,7 +22,7 @@
 <body>
     <header class="headerLarge08">
         <nav class="nav">
-            <a href="index.html"><img class="imglogo" src="./img/logo.jpg" alt=""></a>
+            <a href="index.html"><img class="imglogo" src="./logo/Metroprojekt_PL_v.2.0_PDST.svg" alt=""></a>
             <div class="menuButton">
                 <div class="menuButton__bars">
                     <div class="bar1"></div>
