add new break space in headers and update css

--- a/infrastruktura-kolejowa-i-drogowa.html
+++ b/infrastruktura-kolejowa-i-drogowa.html
@@ -86,7 +86,7 @@
                 </li>
             </ul>
         </nav>
-        <h1 class="h1OverImgLarge"><span>Infrastruktura kolejowa i drogowa</span></h1>
+        <h1 class="h1OverImgLarge"><span>Infrastruktura</span><br><span>kolejowa i drogowa</span></h1>
     </header>
 
     <!-- Section 01 -->
