--- a/inwestorstwo-zastepcze-ekspertyzy.html
+++ b/inwestorstwo-zastepcze-ekspertyzy.html
@@ -86,7 +86,7 @@
                 </li>
             </ul>
         </nav>
-        <h1 class="h1OverImgLarge"><span>Inwestorstwo zastępcze, ekspertyzy i opinie techniczne</span></h1>
+        <h1 class="h1OverImgLarge"><span>Inwestorstwo zastępcze,</span><br><span>ekspertyzy i opinie techniczne</span></h1>
     </header>
 
     <!-- Section 01 -->
