--- a/systemy-sterowania-ruchem-kolejowym.html
+++ b/systemy-sterowania-ruchem-kolejowym.html
@@ -86,7 +86,7 @@
                 </li>
             </ul>
         </nav>
-        <h1 class="h1OverImgLarge"><span>Systemy sterowania ruchem kolejowym</span></h1>
+        <h1 class="h1OverImgLarge"><span>Systemy sterowania</span><br><span>ruchem kolejowym</span></h1>
     </header>
 
     <!-- Section 01 -->
