--- a/uklady-komunikacyjne.html
+++ b/uklady-komunikacyjne.html
@@ -86,7 +86,7 @@
                 </li>
             </ul>
         </nav>
-        <h1 class="h1OverImgLarge"><span>Układy komunikacyjne</span></h1>
+        <h1 class="h1OverImgLarge"><span>Układy</span><br><span>komunikacyjne</span></h1>
     </header>
 
     <!-- Section 01 -->
