--- a/konstrukcje-budowlane-i-inzynierskie.html
+++ b/konstrukcje-budowlane-i-inzynierskie.html
@@ -86,7 +86,7 @@
                 </li>
             </ul>
         </nav>
-        <h1 class="h1OverImgLarge"><span>Konstrukcje budowlane i inżynierskie</span></h1>
+        <h1 class="h1OverImgLarge"><span>Konstrukcje</span><br><span>budowlane i inżynierskie</span></h1>
     </header>
 
     <!-- Section 01 -->
