--- a/sieci-i-instalacje-elektroenergetyczne.html
+++ b/sieci-i-instalacje-elektroenergetyczne.html
@@ -86,7 +86,7 @@
                 </li>
             </ul>
         </nav>
-        <h1 class="h1OverImgLarge"><span>Sieci i instalacje elektroenergetyczne i automatyki przemysłowej</span></h1>
+        <h1 class="h1OverImgLarge"><span>Sieci i instalacje elektroenergetyczne</span><br><span>i automatyki przemysłowej</span></h1>
     </header>
 
     <!-- Section 01 -->
