--- a/sieci-i-instalacje-wodnokanalizacyjne.html
+++ b/sieci-i-instalacje-wodnokanalizacyjne.html
@@ -86,7 +86,7 @@
                 </li>
             </ul>
         </nav>
-        <h1 class="h1OverImgLarge"><span>Sieci i instalacje wodno-kanalizacyjne</span></h1>
+        <h1 class="h1OverImgLarge"><span>wodno-kanalizacyjne</span><br><span>wodno-kanalizacyjne</span></h1>
     </header>
 
     <!-- Section 01 -->
