--- a/systemy-metra-i-szybkiego-tramwaju.html
+++ b/systemy-metra-i-szybkiego-tramwaju.html
@@ -86,7 +86,7 @@
                 </li>
             </ul>
         </nav>
-        <h1 class="h1OverImgLarge"><span>Systemy metra i szybkiego tramwaju</span></h1>
+        <h1 class="h1OverImgLarge"><span>Systemy metra</span><br><span>i szybkiego tramwaju</span></h1>
     </header>
 
     <!-- Section 01 -->
