--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <body>
     <header class="headerBig">
         <nav class="nav">
-            <a href="index.html"><img class="imglogo" src="./logo/" alt=""></a>
+            <a href="index.html"><img class="imglogo" src="./logo/Metroprojekt_PL_v.2.0_PDST.svg" alt=""></a>
             <div class="menuButton">
                 <div class="menuButton__bars">
                     <div class="bar1"></div>
