--- a/index.html
+++ b/index.html
@@ -414,7 +414,7 @@
                         "Zasłuzony dla Budownicwa i Przemysłu Materiałów Budowalnych"
                     </strong></p>
                     <p>
-                        Ortzymaliśmy odznaczenie nadawane przez Ministra Budownictwa i Przemysłu Materiałów Budowalnych, w uznaniu za naszą wieloletnią, aktywną pracę zawodową i działalność oraz zasługi dla rozwoju budownictwa i przemysłu materiałów budowlanych.
+                        Otrzymaliśmy odznaczenie nadawane przez Ministra Budownictwa i Przemysłu Materiałów Budowalnych, w uznaniu za naszą wieloletnią, aktywną pracę zawodową i działalność oraz zasługi dla rozwoju budownictwa i przemysłu materiałów budowlanych.
                     </p>
                 </div>
                 <div class="prizecontainerLabels_Img">
