add content "strona w budowie"

--- a/oferty-pracy.html
+++ b/oferty-pracy.html
@@ -93,6 +93,9 @@
     <!-- Section 01 -->
     <section class="whiteSection" id="firstId">
         <h1 class="h1left">Aktualne oferty pracy</h1>
+        <p>
+            Strona w budowie.
+        </p>
     </section>
 
     <!-- Footer -->
