--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
             </ul>
         </nav>
         <h1 class="h1OverImg"><span>Świadczymy kompleksowe usługi projektowe i służymy naszym klientom od przeszło 70 lat.</span></h1>
-        <img class="yearsimg" src="./img/70 LAT TRADYCJI_gold_04.png" alt="">
+        <img class="yearsimg" src="./img/70 LAT TRADYCJI_gold_04.svg" alt="">
     </header>
 
     <!-- Button Section -->
