--- a/index.html
+++ b/index.html
@@ -305,7 +305,7 @@
                     </div>
                     <div class="peopleLabels_Text">
                         <p>
-                            Obiekty inżynierskie
+                            Konstrukcje budowlane i inżynierskie
                         </p>
                     </div>
                 </a>
