correct another char

--- a/index.html
+++ b/index.html
@@ -411,7 +411,7 @@
             <div class="prizeitem">
                 <div class="prizeLabels_Text">
                     <p><strong>
-                        "Zasłużony dla Budownicwa i Przemysłu Materiałów Budowalnych"
+                        "Zasłużony dla Budownictwa i Przemysłu Materiałów Budowalnych"
                     </strong></p>
                     <p>
                         Otrzymaliśmy odznaczenie nadawane przez Ministra Budownictwa i Przemysłu Materiałów Budowalnych, w uznaniu za naszą wieloletnią, aktywną pracę zawodową i działalność oraz zasługi dla rozwoju budownictwa i przemysłu materiałów budowlanych.
