correct one more char

--- a/index.html
+++ b/index.html
@@ -411,10 +411,10 @@
             <div class="prizeitem">
                 <div class="prizeLabels_Text">
                     <p><strong>
-                        "Zasłużony dla Budownictwa i Przemysłu Materiałów Budowalnych"
+                        "Zasłużony dla Budownictwa i Przemysłu Materiałów Budowlanych"
                     </strong></p>
                     <p>
-                        Otrzymaliśmy odznaczenie nadawane przez Ministra Budownictwa i Przemysłu Materiałów Budowalnych, w uznaniu za naszą wieloletnią, aktywną pracę zawodową i działalność oraz zasługi dla rozwoju budownictwa i przemysłu materiałów budowlanych.
+                        Otrzymaliśmy odznaczenie nadawane przez Ministra Budownictwa i Przemysłu Materiałów Budowlanych, w uznaniu za naszą wieloletnią, aktywną pracę zawodową i działalność oraz zasługi dla rozwoju budownictwa i przemysłu materiałów budowlanych.
                     </p>
                 </div>
                 <div class="prizecontainerLabels_Img">
