add text section to job offers

--- a/oferty-pracy.html
+++ b/oferty-pracy.html
@@ -93,9 +93,11 @@
     <!-- Section 01 -->
     <section class="whiteSection" id="firstId">
         <h1 class="h1left">Aktualne oferty pracy</h1>
-        <p>
-            Strona w budowie.
-        </p>
+        <div class="text_job_Section">
+            <p class="text_Section_p">
+                Brak aktualnych ofert pracy – Zapraszamy w późniejszym terminie.
+            </p>
+        </div>
     </section>
 
     <!-- Footer -->
