add 2 rows text over an images

--- a/jednostki-naukowo-badawcze.html
+++ b/jednostki-naukowo-badawcze.html
@@ -86,7 +86,7 @@
                 </li>
             </ul>
         </nav>
-        <h1 class="h1OverImgLarge"><span>Jednostki naukowo-badawcze</span></h1>
+        <h1 class="h1OverImgLarge"><span>Jednostki</span><br><span>naukowo-badawcze</span></h1>
     </header>
 
     <!-- Section 01 -->
