--- a/mozliwosci-wspolpracy.html
+++ b/mozliwosci-wspolpracy.html
@@ -86,7 +86,7 @@
                 </li>
             </ul>
         </nav>
-        <h1 class="h1OverImgLarge"><span>Możliwości współpracy</span></h1>
+        <h1 class="h1OverImgLarge"><span>Możliwości</span><br><span>współpracy</span></h1>
     </header>
 
     <!-- Section 01 -->
