--- a/mozliwosci-wspolpracy.html
+++ b/mozliwosci-wspolpracy.html
@@ -92,7 +92,7 @@
     <!-- Section 01 -->
     <section class="whiteSection">
         <p>
-            Biuro Projektów "Metroprojekt" jest otwarte na szeroką współpracę we wszystkich obszarach prowadzonej przez siebie działalności. <br> W szczególności zachęcamy do wspólnych działań w zakresie:<br> - projektowania nowych typów urządzeń i systemów
+            Biuro Projektów "Metroprojekt" jest otwarte na szeroką współpracę we wszystkich obszarach prowadzonej przez siebie działalności. W szczególności zachęcamy do wspólnych działań w zakresie:<br><br> - projektowania nowych typów urządzeń i systemów
             sterowania ruchem i zarządzania infrastrukturą<br> - projektowania obiektów nietypowych, rozwiązań specjalizowanych, cyfrowych systemów sterowania i kontroli<br> - testowania urządzeń i systemów sterowania ruchem<br> - analiz ruchowych oraz
             ekonomiczno-finansowych inwestycji infrastrukturalnych<br> - nadzorów autorskich i pełnienia funkcji inwestora zastępczego
         </p>
@@ -101,18 +101,23 @@
             końca, wykorzystując także zaplecze badawczo-rozwojowe oraz kontrahentów w dziedzinie montażu, instalacji i budowy obiektów infrastruktury transportowej i technicznej. Stawiamy na stałą współpracę i długotrwałe korzyści dla obu stron. Interesuje
             nas zawsze wspólny cel i realizacja zadania według potrzeb klienta.
         </p>
+    </section>
+    <section class="colorSection">
         <p>
             Oferujemy współpracę jako podmiot z wieloletnim doświadczeniem i wykwalifikowaną kadrą w projektach badawczo-rozwojowych. Nasi pracownicy prowadzą działalność naukowo-badawczą w obszarze sterowania ruchem kolejowym. Kontakt z najnowocześniejszymi technologiami
             oraz bezpośredni dostęp do producentów urządzeń sterowania ruchem kolejowym zapewnia unikalną w skali kraju możliwość projektowania nowych systemów bezpośrednio na bazie koncepcji opracowanych przez ośrodki naukowo-badawcze. Zachęcamy w szczególności
             uczelnie wyższe i instytuty naukowe do nawiązania kontaktu, który może przerodzić się w stałą współpracę, projekty pilotażowe i docelowe wdrożenie na sieci kolejowej.
         </p>
         <p>
-            Jesteśmy otwarci na współpracę w obszarach:<br> - nowoczesnych metod projektowania i wytwarzania urządzeń i systemów sterowania ruchem<br> - cyfrowych systemów sterowania, systemu ERTMS/ETCS, systemów CBTC<br> - modułowej architektury systemów
-            sterowania i automatyki przemysłowej<br> - diagnostyki infrastruktury i systemów sterowania ruchem<br> - specjalizowanych rozwiązań w dziedzinie transportu i infrastruktury technicznej<br> - nietypowych konstrukcji i obiektów inżynierskich<br>            - innowacyjnych materiałów i ich zastosowania w budownictwie drogowym i kolejowym<br> - zaawansowanych systemów teleinformatycznych i elektroenergetycznych
+            Jesteśmy otwarci na współpracę w obszarach:<br><br> - nowoczesnych metod projektowania i wytwarzania urządzeń i systemów sterowania ruchem<br> - cyfrowych systemów sterowania, systemu ERTMS/ETCS, systemów CBTC<br> - modułowej architektury
+            systemów sterowania i automatyki przemysłowej<br> - diagnostyki infrastruktury i systemów sterowania ruchem<br> - specjalizowanych rozwiązań w dziedzinie transportu i infrastruktury technicznej<br> - nietypowych konstrukcji i obiektów inżynierskich<br>            - innowacyjnych materiałów i ich zastosowania w budownictwie drogowym i kolejowym<br> - zaawansowanych systemów teleinformatycznych i elektroenergetycznych
         </p>
+    </section>
+    <section class="whiteSection">
         <p>
             Nawiążemy współpracę z każdym, kto chce tak jak my rozwijać nowoczesne technologie, realizować konsekwentnie wyznaczone kierunki i nie boi się wyzwań.
         </p>
+        <a class="button02" href="mailto:biuro@metroprojekt.pl">Napisz do Nas</a>
     </section>
 
     <!-- Footer -->
