--- a/mozliwosci-wspolpracy.html
+++ b/mozliwosci-wspolpracy.html
@@ -92,9 +92,9 @@
     <!-- Section 01 -->
     <section class="whiteSection">
         <p>
-            Biuro Projektów "Metroprojekt" jest otwarte na szeroką współpracę we wszystkich obszarach prowadzonej przez siebie działalności. W szczególności zachęcamy do wspólnych działań w zakresie:<br><br> - projektowania nowych typów urządzeń i systemów
-            sterowania ruchem i zarządzania infrastrukturą<br> - projektowania obiektów nietypowych, rozwiązań specjalizowanych, cyfrowych systemów sterowania i kontroli<br> - testowania urządzeń i systemów sterowania ruchem<br> - analiz ruchowych oraz
-            ekonomiczno-finansowych inwestycji infrastrukturalnych<br> - nadzorów autorskich i pełnienia funkcji inwestora zastępczego
+            Biuro Projektów "Metroprojekt" jest otwarte na szeroką współpracę we wszystkich obszarach prowadzonej przez siebie działalności. W szczególności zachęcamy do wspólnych działań w zakresie:<br><br> <span class="lispan">projektowania nowych typów urządzeń i systemów
+            sterowania ruchem i zarządzania infrastrukturą</span><br> <span class="lispan">projektowania obiektów nietypowych, rozwiązań specjalizowanych, cyfrowych systemów sterowania i kontroli</span><br> <span class="lispan">testowania urządzeń i systemów sterowania ruchem</span><br>            <span class="lispan">analiz ruchowych
+            oraz ekonomiczno-finansowych inwestycji infrastrukturalnych</span><br> <span class="lispan">nadzorów autorskich i pełnienia funkcji inwestora zastępczego</span>
         </p>
         <p>
             Zachęcamy do współpracy wszystkie podmioty, które poszukują solidnego partnera w projektach inwestycyjnych wymagających specjalistycznej wiedzy i niecodziennych rozwiązań funkcjonalno-technicznych. Nasz zespół zapewni obsługę inwestycji od początku do
@@ -109,8 +109,8 @@
             uczelnie wyższe i instytuty naukowe do nawiązania kontaktu, który może przerodzić się w stałą współpracę, projekty pilotażowe i docelowe wdrożenie na sieci kolejowej.
         </p>
         <p>
-            Jesteśmy otwarci na współpracę w obszarach:<br><br> - nowoczesnych metod projektowania i wytwarzania urządzeń i systemów sterowania ruchem<br> - cyfrowych systemów sterowania, systemu ERTMS/ETCS, systemów CBTC<br> - modułowej architektury
-            systemów sterowania i automatyki przemysłowej<br> - diagnostyki infrastruktury i systemów sterowania ruchem<br> - specjalizowanych rozwiązań w dziedzinie transportu i infrastruktury technicznej<br> - nietypowych konstrukcji i obiektów inżynierskich<br>            - innowacyjnych materiałów i ich zastosowania w budownictwie drogowym i kolejowym<br> - zaawansowanych systemów teleinformatycznych i elektroenergetycznych
+            Jesteśmy otwarci na współpracę w obszarach:<br><br> <span class="lispan">nowoczesnych metod projektowania i wytwarzania urządzeń i systemów sterowania ruchem</span><br> <span class="lispan">cyfrowych systemów sterowania, systemu ERTMS/ETCS, systemów CBTC</span><br>            <span class="lispan">modułowej architektury
+            systemów sterowania i automatyki przemysłowej</span><br> <span class="lispan">diagnostyki infrastruktury i systemów sterowania ruchem</span><br> <span class="lispan">specjalizowanych rozwiązań w dziedzinie transportu i infrastruktury technicznej</span><br>            <span class="lispan">nietypowych konstrukcji i obiektów inżynierskich</span><br><span class="lispan">innowacyjnych materiałów i ich zastosowania w budownictwie drogowym i kolejowym</span><br> <span class="lispan">zaawansowanych systemów teleinformatycznych i elektroenergetycznych</span>
         </p>
     </section>
     <section class="whiteSection">
