--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
     <!-- Section 04 -->
     <section class="colorSection" id="kadra">
         <h1 class="h1left">Kadra</h1>
-        <div class="rightsmallpdiv">
+        <div class="text_margin_Section">
             <p>
                 Nasze rozwiązania opierają się na interdyscyplinarnym podejściu do projektów oraz na zespole, który tworzą specjaliści z wieloletnim doświadczeniem.
             </p>
@@ -375,7 +375,7 @@
     <!-- Section 06 -->
     <section class="colorSection" id="nagrody_certyfikaty">
         <h1 class="h1left">Nagrody i certyfikaty</h1>
-        <div class="rightsmallpdiv">
+        <div class="text_margin_Section">
             <p>
                 Od 70-ciu lat dokładamy wszelkich starań, aby dostarczać naszym klientom skuteczne rozwiązania na światowym poziomie oraz usługi najwyżej jakości czego odzwierciedleniem są m.in. trzy wyróżnienia, które otrzymaliśmy za nasze zasługi dla rozwoju Warszawy
                 oraz budownictwa.
