--- a/oferty-pracy.html
+++ b/oferty-pracy.html
@@ -93,7 +93,7 @@
     <!-- Section 01 -->
     <section class="whiteSection" id="firstId">
         <h1 class="h1left">Aktualne oferty pracy</h1>
-        <div class="text_job_Section">
+        <div class="text_margin_Section">
             <p class="text_Section_p">
                 Brak aktualnych ofert pracy – Zapraszamy w późniejszym terminie.
             </p>
