add new class and new css to prize text p

--- a/index.html
+++ b/index.html
@@ -387,7 +387,7 @@
                     <p><strong>
                         Medal "IV Wieki Stołeczności Warszawy"
                     </strong></p>
-                    <p>
+                    <p class="prizeLabels_Text_p">
                         W 1996 roku, z okazji jubileuszu czterechsetlecia stołeczności Warszawy zostaliśmy uhonorowani medalem pamiątkowym za nasz wieloletni wkład w rozwój stolicy.
                     </p>
                 </div>
@@ -400,7 +400,7 @@
                     <p><strong>
                         Wyróżnienie "Zasłużony dla Warszawy"
                     </strong></p>
-                    <p>
+                    <p class="prizeLabels_Text_p">
                         Otrzymaliśmy wyróżnienie, które przyznawane jest osobom fizycznym oraz jednostkom organizacyjnym wyróżniającym się działalnością na rzecz Warszawy, w szczególności w sferze społecznej, naukowej i edukacyjnej.
                     </p>
                 </div>
@@ -413,7 +413,7 @@
                     <p><strong>
                         "Zasłużony dla Budownictwa i Przemysłu Materiałów Budowlanych"
                     </strong></p>
-                    <p>
+                    <p class="prizeLabels_Text_p">
                         Otrzymaliśmy odznaczenie nadawane przez Ministra Budownictwa i Przemysłu Materiałów Budowlanych, w uznaniu za naszą wieloletnią, aktywną pracę zawodową i działalność oraz zasługi dla rozwoju budownictwa i przemysłu materiałów budowlanych.
                     </p>
                 </div>
