add reference section content and css

--- a/referencje.html
+++ b/referencje.html
@@ -93,54 +93,39 @@
     <section class="whiteSection">
         <div class="colP">
             <div class="rowP">
-                <a class="contCert" href="ref/Referencje_01.jpg">
-                    <img src="ref/Referencje_01.jpg" alt="" width="100%" height="auto"></a>
+                <a class="contCert" href="ref/Ref01.pdf">
+                    <img src="ref/Ref01.jpg" alt="" width="100%" height="auto"></a>
                 <p class="centered">
-                    <strong>Referencja 01</strong><br> <i>Firma</i>
+                    <strong>METRO WARSZAWSKIE<br>Sp. z o.o.</strong>
                 </p>
-                <a class="contCert" href="ref/Referencje_01.jpg">
-                    <img src="ref/Referencje_01.jpg" alt="" width="100%" height="auto"></a>
+                <a class="contCert" href="ref/Ref02.pdf">
+                    <img src="ref/Ref02.jpg" alt="" width="100%" height="auto"></a>
                 <p class="centered">
-                    <strong>Referencja 02</strong><br> <i>Firma</i>
-                </p>
-                <a class="contCert" href="ref/Referencje_01.jpg">
-                    <img src="ref/Referencje_01.jpg" alt="" width="100%" height="auto"></a>
-                <p class="centered">
-                    <strong>Referencja 03</strong><br> <i>Firma</i>
+                    <strong>METRO WARSZAWSKIE<br>Sp. z o.o.</strong>
                 </p>
             </div>
             <div class="rowP">
-                <a class="contCert" href="ref/Referencje_01.jpg">
-                    <img src="ref/Referencje_01.jpg" alt="" width="100%" height="auto"></a>
+                <a class="contCert" href="ref/Ref04.pdf">
+                    <img src="ref/Ref04.jpg" alt="" width="100%" height="auto"></a>
                 <p class="centered">
-                    <strong>Referencja 04</strong><br> <i>Firma</i>
+                    <strong>PRG METRO<br>Sp. z o.o.</strong>
                 </p>
-                <a class="contCert" href="ref/Referencje_01.jpg">
-                    <img src="ref/Referencje_01.jpg" alt="" width="100%" height="auto"></a>
+                <a class="contCert" href="ref/Ref05.pdf">
+                    <img src="ref/Ref05.jpg" alt="" width="100%" height="auto"></a>
                 <p class="centered">
-                    <strong>Referencja 05</strong><br> <i>Firma</i>
-                </p>
-                <a class="contCert" href="ref/Referencje_01.jpg">
-                    <img src="ref/Referencje_01.jpg" alt="" width="100%" height="auto"></a>
-                <p class="centered">
-                    <strong>Referencja 06</strong><br> <i>Firma</i>
+                    <strong>Urząd Miasta<br>Ząbki</strong>
                 </p>
             </div>
             <div class="rowP">
-                <a class="contCert" href="ref/Referencje_01.jpg">
-                    <img src="ref/Referencje_01.jpg" alt="" width="100%" height="auto"></a>
+                <a class="contCert" href="ref/Ref04.pdf">
+                    <img src="ref/Ref04.jpg" alt="" width="100%" height="auto"></a>
                 <p class="centered">
-                    <strong>Referencja 07</strong><br> <i>Firma</i>
+                    <strong>PRG METRO<br>Sp. z o.o.</strong>
                 </p>
-                <a class="contCert" href="ref/Referencje_01.jpg">
-                    <img src="ref/Referencje_01.jpg" alt="" width="100%" height="auto"></a>
+                <a class="contCert" href="ref/Ref05.pdf">
+                    <img src="ref/Ref05.jpg" alt="" width="100%" height="auto"></a>
                 <p class="centered">
-                    <strong>Referencja 08</strong><br> <i>Firma</i>
-                </p>
-                <a class="contCert" href="ref/Referencje_01.jpg">
-                    <img src="ref/Referencje_01.jpg" alt="" width="100%" height="auto"></a>
-                <p class="centered">
-                    <strong>Referencja 09</strong><br> <i>Firma</i>
+                    <strong>Urząd Miasta<br>Ząbki</strong>
                 </p>
             </div>
         </div>
