--- a/dolacz-do-nas.html
+++ b/dolacz-do-nas.html
@@ -92,7 +92,7 @@
     <!-- Section 01 -->
     <section class="whiteSection">
         <p>
-            Biuro Projektów "Metroprojekt" powiększa swój zespół projektantów, asystentów i specjalistów w różnych branżach. Jeśli poszukujesz ciekawej pracy, ambitnych wyzwań i projektów w obszarach najnowocześniejszych technologii - dołącz do naszego zespołu! Oferujemy
+            Biuro Projektów "Metroprojekt" sp. z o.o. powiększa swój zespół projektantów, asystentów i specjalistów w różnych branżach. Jeśli poszukujesz ciekawej pracy, ambitnych wyzwań i projektów w obszarach najnowocześniejszych technologii - dołącz do naszego zespołu! Oferujemy
             stabilne warunki pracy, możliwość rozwoju i zdobywania unikalnego doświadczenia w wielobranżowym biurze projektowym. Zależy nam na wytrwałości, konsekwencji i zespołowym działaniu w dążeniu do wyznaczonych przez nas celów.
         </p>
         <p>
