--- a/mozliwosci-wspolpracy.html
+++ b/mozliwosci-wspolpracy.html
@@ -92,7 +92,7 @@
     <!-- Section 01 -->
     <section class="whiteSection">
         <p>
-            Biuro Projektów "Metroprojekt" jest otwarte na szeroką współpracę we wszystkich obszarach prowadzonej przez siebie działalności. W szczególności zachęcamy do wspólnych działań w zakresie:<br><br> <span class="lispan">projektowania nowych typów urządzeń i systemów
+            Biuro Projektów "Metroprojekt" sp. z o.o. jest otwarte na szeroką współpracę we wszystkich obszarach prowadzonej przez siebie działalności. W szczególności zachęcamy do wspólnych działań w zakresie:<br><br> <span class="lispan">projektowania nowych typów urządzeń i systemów
             sterowania ruchem i zarządzania infrastrukturą</span><br> <span class="lispan">projektowania obiektów nietypowych, rozwiązań specjalizowanych, cyfrowych systemów sterowania i kontroli</span><br> <span class="lispan">testowania urządzeń i systemów sterowania ruchem</span><br>            <span class="lispan">analiz ruchowych
             oraz ekonomiczno-finansowych inwestycji infrastrukturalnych</span><br> <span class="lispan">nadzorów autorskich i pełnienia funkcji inwestora zastępczego</span>
         </p>
