correct references title

--- a/referencje.html
+++ b/referencje.html
@@ -125,7 +125,7 @@
                 <a class="contCert" href="ref/Ref06.pdf">
                     <img src="ref/Ref06.jpg" alt="" width="100%" height="auto"></a>
                 <p class="centered">
-                    <strong>Urząd Miasta<br>Ząbki</strong>
+                    <strong>METRO WARSZAWSKIE<br>Sp. z o.o.</strong>
                 </p>
             </div>
         </div>
