--- a/jednostki-naukowo-badawcze.html
+++ b/jednostki-naukowo-badawcze.html
@@ -91,34 +91,7 @@
 
     <!-- Section 01 -->
     <section class="whiteSection">
-        <div class="linkImgTextSection">
-            <a href="https://www.wt.pw.edu.pl/" target="_blank">
-                <div class="imgTextSection">
-                    <div class="imgTextSection__Image">
-                        <img src="./logo/WT-znak.jpg" alt="" width="300" height="100">
-                    </div>
-                    <div class="imgTextSection__Text">
-                        <p>
-                            Wydział Transportu Politechniki Warszawskiej
-                        </p>
-                    </div>
-                </div>
-            </a>
-        </div>
-        <div class="linkImgTextSection">
-            <a href="http://www.sitkrp.org.pl/" target="_blank">
-                <div class="imgTextSection">
-                    <div class="imgTextSection__Image">
-                        <img src="./logo/SITK RP - Logo.jpg" alt="" width="300" height="100">
-                    </div>
-                    <div class="imgTextSection__Text">
-                        <p>
-                            SITK Zarząd Krajowy
-                        </p>
-                    </div>
-                </div>
-            </a>
-        </div>
+        <img src="./img/Strona w budowie_02.jpg" alt="Strona w budowie" width="100%">
     </section>
 
     <!-- Footer -->
