add "work in progress" in reference subpage

--- a/referencje.html
+++ b/referencje.html
@@ -91,7 +91,7 @@
 
     <!-- Section 01 -->
     <section class="whiteSection">
-
+        <img src="./img/Strona w budowie_02.jpg" alt="Strona w budowie" width="100%">
     </section>
 
     <!-- Footer -->
