--- a/index.html
+++ b/index.html
@@ -13,8 +13,6 @@
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600&display=swap" rel="stylesheet">
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200;300;400;500;600&display=swap" rel="stylesheet">
     <!-- Title -->
     <title>Biuro Projektów Metroprojekt</title>
 </head>
@@ -93,7 +91,7 @@
                 </li>
             </ul>
         </nav>
-        <h1 class="h1OverImg"><span>Świadczymy kompleksowe usługi projektowe i służymy naszym klientom od przeszło 70 lat.</span></h1>
+        <h1 class="h1OverImg"><span>Świadczymy kompleksowe usługi projektowe naszym klientom od przeszło 70 lat.</span></h1>
         <img class="yearsimg" src="./img/70 LAT TRADYCJI_białe.png" alt="">
     </header>
 
