delete unused font link

--- a/dolacz-do-nas.html
+++ b/dolacz-do-nas.html
@@ -13,8 +13,6 @@
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600&display=swap" rel="stylesheet">
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200;300;400;500;600&display=swap" rel="stylesheet">
     <!-- Title -->
     <title>Biuro Projektów Metroprojekt</title>
 </head>
@@ -92,8 +90,8 @@
     <!-- Section 01 -->
     <section class="whiteSection">
         <p>
-            Biuro Projektów "Metroprojekt" sp. z o.o. powiększa swój zespół projektantów, asystentów i specjalistów w różnych branżach. Jeśli poszukujesz ciekawej pracy, ambitnych wyzwań i projektów w obszarach najnowocześniejszych technologii - dołącz do naszego zespołu! Oferujemy
-            stabilne warunki pracy, możliwość rozwoju i zdobywania unikalnego doświadczenia w wielobranżowym biurze projektowym. Zależy nam na wytrwałości, konsekwencji i zespołowym działaniu w dążeniu do wyznaczonych przez nas celów.
+            Biuro Projektów "Metroprojekt" sp. z o.o. powiększa swój zespół projektantów, asystentów i specjalistów w różnych branżach. Jeśli poszukujesz ciekawej pracy, ambitnych wyzwań i projektów w obszarach najnowocześniejszych technologii - dołącz do naszego
+            zespołu! Oferujemy stabilne warunki pracy, możliwość rozwoju i zdobywania unikalnego doświadczenia w wielobranżowym biurze projektowym. Zależy nam na wytrwałości, konsekwencji i zespołowym działaniu w dążeniu do wyznaczonych przez nas celów.
         </p>
         <p>
             Zapraszamy do aplikowania także osoby bezpośrednio po studiach technicznych lub na ostatnich latach studiów - oferujemy płatne praktyki i staże.
