add nav fixed and add new before width 40px height

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 
     <!-- Section 01 -->
     <section class="whiteSection" id="onas">
-        <h1 class="h1left">O nas</h1>
+        <h1 class="h1left anchor">O nas</h1>
         <div class="text_Img_Section">
             <div class="text_Section">
                 <p class="text_Section_p">
@@ -124,7 +124,7 @@
 
     <!-- Section 02 -->
     <section class="colorSection" id="co_nas_wyroznia">
-        <h1 class="h1left">Co nas wyróżnia</h1>
+        <h1 class="h1left anchor">Co nas wyróżnia</h1>
         <div class="containerLabels">
             <div class="citem">
                 <div class="containerLabels_Img">
@@ -191,7 +191,7 @@
 
     <!-- Section 03 -->
     <section class="whiteSection" id="historia_firmy">
-        <h1 class="h1left">Historia firmy</h1>
+        <h1 class="h1left anchor">Historia firmy</h1>
         <div class="historySection">
             <div class="historySection--col">
                 <p>
@@ -224,7 +224,7 @@
 
     <!-- Section 04 -->
     <section class="colorSection" id="kadra">
-        <h1 class="h1left">Kadra</h1>
+        <h1 class="h1left anchor">Kadra</h1>
         <div class="text_margin_Section">
             <p>
                 Nasze rozwiązania opierają się na interdyscyplinarnym podejściu do projektów oraz na zespole, który tworzą specjaliści z wieloletnim doświadczeniem.
@@ -336,7 +336,7 @@
 
     <!-- Section 05 -->
     <section class="colorSection" id="nagrody_certyfikaty">
-        <h1 class="h1left">Nagrody i certyfikaty</h1>
+        <h1 class="h1left anchor">Nagrody i certyfikaty</h1>
         <div class="text_margin_Section">
             <p>
                 Od 70-ciu lat dokładamy wszelkich starań, aby dostarczać naszym klientom skuteczne rozwiązania na światowym poziomie oraz usługi najwyżej jakości czego odzwierciedleniem są m.in. trzy wyróżnienia, które otrzymaliśmy za nasze zasługi dla rozwoju Warszawy
