--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
     <section class="whiteSection" id="onas">
         <h1 class="h1left anchor">O nas</h1>
         <div class="text_Img_Section">
-            <div class="text_Section">
+            <div class="text_Section text_margin_Section">
                 <p class="text_Section_p">
                     Biuro Projektów "Metroprojekt" sp. z o.o. jest firmą z 70-letnią tradycją w projektowaniu obiektów kubaturowych, infrastruktury transportowej, instalacji i systemów kolejowych oraz metra. Świadczymy usługi projektowe dla inwestorów, wykonawców budowlanych
                     oraz współpracujemy z innymi biurami projektowymi.
