--- a/index.html
+++ b/index.html
@@ -33,11 +33,11 @@
                 <li class="menuListFirstLine menuListDrop">
                     <a href="#" class="menuListItem expandList first">Firma<i class="fas fa-angle-down"></i></a>
                     <ul class="menuListDrop-menu expand middle">
-                        <li><a href="#onas" class="menuListItem">O nas</a></li>
-                        <li><a href="#co_nas_wyroznia" class="menuListItem">Co nas wyróżnia</a></li>
-                        <li><a href="#historia_firmy" class="menuListItem">Historia firmy</a></li>
-                        <li><a href="#kadra" class="menuListItem">Kadra</a></li>
-                        <li><a href="#nagrody_certyfikaty" class="menuListItem">Nagrody i certyfikaty</a></li>
+                        <li><a href="#onas" class="menuListItem menuListAnchorClose">O nas</a></li>
+                        <li><a href="#co_nas_wyroznia" class="menuListItem menuListAnchorClose">Co nas wyróżnia</a></li>
+                        <li><a href="#historia_firmy" class="menuListItem menuListAnchorClose">Historia firmy</a></li>
+                        <li><a href="#kadra" class="menuListItem menuListAnchorClose">Kadra</a></li>
+                        <li><a href="#nagrody_certyfikaty" class="menuListItem menuListAnchorClose">Nagrody i certyfikaty</a></li>
                     </ul>
                 </li>
                 <!-- Nav list - Services -->
