--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                 </li>
             </ul>
         </nav>
-        <h1 class="h1OverImg"><span>Świadczymy kompleksowe usługi projektowe naszym klientom od przeszło 70 lat.</span></h1>
+        <h1 class="h1OverImg"><span>Świadczymy kompleksowe</span><br><span> usługi projektowe naszym</span><br><span> klientom od przeszło 70 lat.</span></h1>
         <img class="yearsimg" src="./img/70 LAT TRADYCJI_białe.png" alt="">
     </header>
 
